<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/backgroundMainView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/bg_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background" />

    <Button
        android:id="@+id/favoritesButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/mustard"
        android:text="@string/favorites_button"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/moviesButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/worldsButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/mustard"
        android:text="@string/worlds_button"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/moviesButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/moviesButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/mustard"
        android:text="@string/movies_button"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/worldsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/favoritesButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCharacters"
        android:layout_width="410dp"
        android:layout_height="432dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/exitButton"
        app:layout_constraintTop_toBottomOf="@+id/moviesButton">


    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="@color/mustard"
        android:text="@string/exit_button"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundMainView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvCharacters" />

    <ImageView
        android:id="@+id/loadingImage"
        android:layout_width="313dp"
        android:layout_height="388dp"
        app:layout_constraintBottom_toBottomOf="@+id/rvCharacters"
        app:layout_constraintEnd_toEndOf="@+id/backgroundMainView"
        app:layout_constraintStart_toStartOf="@+id/backgroundMainView"
        app:layout_constraintTop_toTopOf="@+id/rvCharacters"
        android:visibility="invisible"
        app:srcCompat="@drawable/splash" />

</androidx.constraintlayout.widget.ConstraintLayout>