<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="#00000000"
    android:backgroundTint="#B5000000"
    android:backgroundTintMode="add"
    android:padding="8dp"
    app:cardCornerRadius="10dp">

    <TextView
        android:id="@+id/charName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:textAlignment="viewStart"
        android:textColor="@color/yellow"
        android:textColorLink="#F3EFEF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/charImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/charImage"
        android:layout_width="101dp"
        android:layout_height="65dp"
        android:contentDescription="@string/character_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/charName"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448"
        tools:srcCompat="@drawable/char_image" />

    <TextView
        android:id="@+id/charHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/character_height_label"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/charImage"
        app:layout_constraintTop_toBottomOf="@+id/charName" />

    <TextView
        android:id="@+id/charYearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/character_birthyear_label"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/charImage"
        app:layout_constraintTop_toBottomOf="@+id/charHeightLabel" />

    <TextView
        android:id="@+id/charYear"
        android:layout_width="53dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/charYearLabel" />

    <TextView
        android:id="@+id/charHeight"
        android:layout_width="29dp"
        android:layout_height="19dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="28dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/charHeightLabel" />

    <ImageView
        android:id="@+id/favoriteButton"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/favorite_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/favorite_outline" />

</androidx.constraintlayout.widget.ConstraintLayout>